# eulerian-liquid

./: .cmake-format  .gitignore  CMakeLists.txt  README.md  codecov.yaml
.github/workflows/: ubuntu.yml
apps/: CMakeLists.txt  eulerian_liquid_3d.cpp  settings.h
cmake/: CompilerWarnings.cmake  Macros.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
include/nama/: abstract_visualizer.h  constants.h  opengl_visualizer.h  output_config.h  path.h.in  simulator_base.h
include/nama/common/: array.h  constants.h  grid.h  mesh.h  meshing.h  staggered_grid.h
include/nama/graphics/: camera.h  draw.h  init.h  material.h  window.h
include/nama/graphics/draw/: grid.h  mesh.h  tools.h
include/nama/math/: geometry.h  interpolation.h  level_set.h  ode.h  utils.h
include/nama/project/3d/eulerian_liquid/: scene.h  simulation_params.h  simulator.h
include/nama/project/3d/eulerian_liquid/visualizer/: 01_marching_cubes.h  02_contour_2d.h  visualizer_base.h
include/nama/project/3d/fluid/: advection.h  boundary.h  extrapolation.h  levelset_emitter.h  projection.h  reinitialization.h  time_stepping.h
include/nama/utils/: logger.h  macros.h  timer.h  utils.h  writer.h
script/: graph_creator.py  movie_generator.py  paths.py.in  render.py  run.py  text.py  tile.py  utils.py
script/blender/: fluid.blend  sample.blend  swap_and_render.py
script/graph/: __init__.py  sample.py
script/visualization/: height_1d.py  iogrid.py
script/yml/: sample_3d.yml
src/: abstract_visualizer.cpp  opengl_visualizer.cpp  output_config.cpp  simulator_base.cpp
src/common/: mesh.cpp  meshing.cpp
src/graphics/: camera.cpp  draw.cpp  init.cpp  material.cpp  window.cpp
src/graphics/draw/: grid.cpp  mesh.cpp  tools.cpp
src/project/3d/eulerian_liquid/: scene.cpp  simulation_params.cpp  simulator.cpp
src/project/3d/eulerian_liquid/visualizer/: 01_marching_cubes.cpp  02_contour_2d.cpp  visualizer_base.cpp
src/project/3d/fluid/: advection.cpp  boundary.cpp  extrapolation.cpp  levelset_emitter.cpp  projection.cpp  reinitialization.cpp  time_stepping.cpp
src/utils/: utils.cpp
test/: CMakeLists.txt  sample.cpp
test/common/: grid.cpp  meshing.cpp  staggerd_grid.cpp
test/math/: interpolation.cpp
